fixing logic with statistics